# MPIReduction

./: CMakeLists.txt  README.md  build-remote.sh  deploy.sh  experiment2.sh  experiment3.sh  experiment4.sh  graphs.py  main.cpp  reduce_scatter  ring.cpp  simple_reduce.cpp
experiment_results/: experiment2_1000000_floats.txt  experiment2_1000_floats.txt  experiment2_200000000_floats.txt  experiment3_1000000_floats.txt  experiment3_1000_floats.txt  experiment3_200000000_floats.txt  experiment4_1000000_floats.txt  experiment4_1000_floats.txt  experiment4_200000000_floats.txt
